fixed dropdown style on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ input.flat-input {
 }
 
 select {
+    appearance: none;
     border: none;
     outline: none;
     background-color: var(--standout-background-color);
